@@ -7,6 +7,7 @@ import java.util.List;
 public class StrategyList {
 
 	public static List<Class<? extends Strategy>> strategies = List.of(
+			Caretta.class,
 			DonchianChannel.class,
 			BuyATH.class,
 			RandomStrategy.class);
